# magicmida-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  run_unpack.bat  scylla_hide.ini
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  commands.rs  log.rs  main.rs
crates/cli/src/unpacker/: av_handler.rs  dump.rs  helpers.rs  iat_trace.rs  mod.rs  oep_scan.rs  session.rs  verify.rs
crates/core/: Cargo.toml
crates/core/src/: breakpoint.rs  debugger.rs  error.rs  lib.rs  process.rs  windows_debugger.rs
crates/disasm/: Cargo.toml
crates/disasm/src/: decoder.rs  error.rs  iat_scanner.rs  lib.rs  pattern.rs
crates/packers/themida/: Cargo.toml
crates/packers/themida/src/: antiantidebug.rs  binaries.rs  common.rs  error.rs  guard.rs  iat.rs  init.rs  lib.rs  oep.rs  postprocess.rs  text_tracer.rs  trace_imports.rs  version.rs
crates/packers/themida/src/antiantidebug/: handlers.rs  kifast.rs  mod.rs  scyllahide.rs  tests.rs
crates/packers/themida/src/iat/: boundaries.rs  discovery.rs  fix.rs  mod.rs
crates/packers/themida/src/oep/: mod.rs  restore.rs
crates/packers/themida/src/postprocess/: anti_dump.rs  data_sections.rs  helpers.rs  mod.rs
crates/packers/themida/src/text_tracer/: mod.rs  tests.rs
crates/packers/themida/src/trace_imports/: decision.rs  mod.rs  slot.rs
crates/packers/themida/src/version/: mod.rs  tests.rs
crates/pe/: Cargo.toml
crates/pe/src/: apiset.rs  apiset_data.rs  dumper.rs  error.rs  header.rs  import_table.rs  lib.rs  original_imports.rs  postprocess.rs  relocation.rs  section.rs  utils.rs
crates/pe/src/dumper/: dump_process.rs  header_patch.rs  helpers.rs  import_rebuild.rs  import_section.rs  mod.rs  original_imports.rs  output_writer.rs  remote_modules.rs  sections.rs  serialize.rs  tests.rs  types.rs
crates/pe/src/header/: mod.rs  tests.rs
crates/tracer/: Cargo.toml
crates/tracer/src/: error.rs  lib.rs  tracer.rs
