[workspace]
members = [
    "crates/core",
    "crates/pe",
    "crates/disasm",
    "crates/tracer",
    "crates/packers/themida",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
iced-x86 = "1.21"
pelite = "0.10"
thiserror = "1"
tracing = "0.1"
anyhow = "1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Wdk_System_Threading",
] }
