[package]
name = "mida-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Magicmida-RS"
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
mida-core = { path = "../core" }
mida-pe = { path = "../pe" }
mida-disasm = { path = "../disasm" }
mida-tracer = { path = "../tracer" }
mida-packers-themida = { path = "../packers/themida" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows = { workspace = true }
