[package]
name = "mida-core"
version.workspace = true
edition.workspace = true
description = "Debugger core: process creation, breakpoints, debug event loop"
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
pelite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
windows = { workspace = true }
