[package]
name = "mida-disasm"
version.workspace = true
edition.workspace = true
description = "iced-x86 wrapper for instruction disassembly and pattern matching"
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
iced-x86 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
