[package]
name = "mida-pe"
version.workspace = true
edition.workspace = true
description = "PE parsing, section operations, import table reconstruction"
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
mida-core = { path = "../core" }
pelite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
windows = { workspace = true }
mida-disasm = { path = "../disasm" }
