[package]
name = "mida-tracer"
version.workspace = true
edition.workspace = true
description = "Single-step trace engine for following unpacker control flow"
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
mida-core = { path = "../core" }
mida-disasm = { path = "../disasm" }
thiserror = { workspace = true }
tracing = { workspace = true }
windows = { workspace = true }
