[package]
name = "mida-packers-themida"
version.workspace = true
edition.workspace = true
description = "Themida unpacker implementation"
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
mida-core = { path = "../../core" }
mida-pe = { path = "../../pe" }
mida-disasm = { path = "../../disasm" }
mida-tracer = { path = "../../tracer" }
iced-x86 = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tracing = { workspace = true }
windows = { workspace = true }
